labelstudio-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-vol
      volumes:
        - name: postgres-vol
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labelstudio
spec:
  replicas: 1
  selector:
    matchLabels:
      component: labelstudio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: labelstudio
    spec:
      containers:
        - name: labelstudio
          image: heartexlabs/label-studio:latest
          imagePullPolicy: Always
          stdin: true
          tty: true
          livenessProbe:
            exec:
              command:
              - ls
              - /
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
              - ls
              - /
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: labelstudio-data-vol
              mountPath: /label-studio/data
      volumes:
        - name: labelstudio-data-vol
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: labelstudio
spec:
  ports:
    - port: 8080
  selector:
    component: labelstudio
  clusterIP: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: label-studio-route
spec:
  path: /
  to:
    kind: Service
    name: labelstudio
  port:
    targetPort: 8080
